Convert proto family in both directions. The linux and native values for local and inet are identical, but for inet6 values differ.

PR:		155040
Reported by:	Simon Walton
MFC after:	2 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@300431 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f